# CountryInformation

./: .gitignore  .gitmodules  .pylintrc  ReadMe.md  package.json
.well-known/: security.txt
CountryInformation/: .coveragerc  CountryInformation.codeunit.xml  ReadMe.md  requirements.txt  setup.cfg
CountryInformation/CountryInformation/: CacheForLanguages.py  Country.py  CountryData.py  CountryInformationCore.py  CountryUtilities.py  CulturedLanguage.py  Language.py  LanguageCodeConversionUtilities.py  LanguageData.py
CountryInformation/CountryInformationTests/: test_CountryInformation.py
CountryInformation/Other/: .gitignore  CommonTasks.py
CountryInformation/Other/QualityCheck/: Linting.py  RunTestcases.py
CountryInformation/Other/Reference/ReferenceContent/: index.md
CountryInformation/Other/Resources/Data/: CommonCultureLanguageCombinations.csv  Countries.csv  Languages.csv  LanguagesWithFallbackLanguage.csv
CountryInformation/Other/Resources/RawData/: Countries.json
CountryInformation/Other/Resources/TestCoverageHistory/: 2025-07-25_16-45-05_CoverageHistory.xml  2025-07-25_17-22-04_CoverageHistory.xml  2025-07-25_17-42-20_CoverageHistory.xml  2025-08-07_18-42-26_CoverageHistory.xml  2025-09-08_17-27-23_CoverageHistory.xml  2025-10-16_00-46-39_CoverageHistory.xml  2025-11-10_00-13-21_CoverageHistory.xml  2025-11-10_00-37-07_CoverageHistory.xml  2025-11-10_01-11-46_CoverageHistory.xml  2025-11-23_12-13-43_CoverageHistory.xml  2025-12-08_23-48-24_CoverageHistory.xml  2025-12-24_15-38-40_CoverageHistory.xml  2026-04-19_10-08-24_CoverageHistory.xml
(+13 files in other folders)
