[metadata]
name = CountryInformation
version = 1.0.1
author = Marius Göcke
author_email = marius.goecke@gmail.com
description = CountryInformation is a project to provide certain country- and language-information in a way which is well processable programmatically.
long_description = file:ReadMe.md
long_description_content_type = text/markdown
url = https://github.com/anionDev/CountryInformation
classifiers =
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows :: Windows 10
    Topic :: System :: Logging
    Topic :: System :: Monitoring
    Topic :: System :: Archiving :: Packaging
    Topic :: System :: Systems Administration
    Topic :: Terminals
    Topic :: Utilities
keywords = package release build management
project_urls =
    Documentation = https://aniondev.github.io/CountryInformationReference/index.html
    Changelog = https://github.com/anionDev/CountryInformation/tree/main/Other/Resources/Changelog

[options]
packages = CountryInformation
zip_safe = False
include_package_data = False
python_requires = >=3.10
install_requires =
    ScriptCollection>=3.5.146
[options.packages.find]
exclude = CountryInformationTests
